--- a/ClueHelper/ClueHelper.csproj
+++ b/ClueHelper/ClueHelper.csproj
@@ -44,7 +44,9 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\ObservableObject.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\PlayerPossibility.cs" />
     <Compile Include="Models\Possibility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solver.cs" />
