--- a/ScoreCard/ScoreCard.csproj
+++ b/ScoreCard/ScoreCard.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CardListConverter.cs" />
     <Compile Include="IMainViewModel.cs" />
     <Compile Include="MainViewModelDesignData.cs" />
+    <Compile Include="PossibilityConverter.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="ObservableObject.cs" />
