--- a/ScoreCard/ScoreCard.csproj
+++ b/ScoreCard/ScoreCard.csproj
@@ -57,12 +57,18 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CardListConverter.cs" />
+    <Compile Include="DialogViewModel.cs" />
+    <Compile Include="DialogViewModelDesignData.cs" />
+    <Compile Include="IDialogViewModel.cs" />
     <Compile Include="IMainViewModel.cs" />
     <Compile Include="MainViewModelDesignData.cs" />
     <Compile Include="PossibilityConverter.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="ObservableObject.cs" />
+    <Compile Include="SuggestionResponseDialog.xaml.cs">
+      <DependentUpon>SuggestionResponseDialog.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,6 +81,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SuggestionResponseDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
