--- a/ClueHelper/ClueHelper.csproj
+++ b/ClueHelper/ClueHelper.csproj
@@ -43,7 +43,7 @@
     <Compile Include="GameException.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Config.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\ObservableObject.cs" />
     <Compile Include="Models\Player.cs" />
