--- a/ScoreCard/ScoreCard.csproj
+++ b/ScoreCard/ScoreCard.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Interfaces\IMainViewModel.cs" />
     <Compile Include="DesignData\MainViewModelDesignData.cs" />
     <Compile Include="ViewModels\GameBuilderViewModel.cs" />
+    <Compile Include="ViewModels\SuggestionManager.cs" />
     <Compile Include="Views\GameBuilderDialog.xaml.cs">
       <DependentUpon>GameBuilderDialog.xaml</DependentUpon>
     </Compile>
