--- a/ScoreCard/ScoreCard.csproj
+++ b/ScoreCard/ScoreCard.csproj
@@ -64,11 +64,14 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DesignData\GameBuilderViewModelDesignData.cs" />
+    <Compile Include="DesignData\SelectCardsViewModelDesignData.cs" />
     <Compile Include="Interfaces\IGameBuilderViewModel.cs" />
+    <Compile Include="Interfaces\ISelectCardsViewModel.cs" />
     <Compile Include="Models\PotentialPlayer.cs" />
-    <Compile Include="ViewModels\DialogViewModel.cs" />
-    <Compile Include="DesignData\DialogViewModelDesignData.cs" />
-    <Compile Include="Interfaces\IDialogViewModel.cs" />
+    <Compile Include="ViewModels\SelectCardsViewModel.cs" />
+    <Compile Include="ViewModels\SuggestionResponseViewModel.cs" />
+    <Compile Include="DesignData\SuggestionResponseViewModelDesignData.cs" />
+    <Compile Include="Interfaces\ISuggestionResponseViewModel.cs" />
     <Compile Include="Interfaces\IMainViewModel.cs" />
     <Compile Include="DesignData\MainViewModelDesignData.cs" />
     <Compile Include="ViewModels\GameBuilderViewModel.cs" />
@@ -80,6 +83,9 @@
     <Compile Include="MVVM\RelayCommand.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="MVVM\ObservableObject.cs" />
+    <Compile Include="Views\SelectCardsDialog.xaml.cs">
+      <DependentUpon>SelectCardsDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SuggestionResponseDialog.xaml.cs">
       <DependentUpon>SuggestionResponseDialog.xaml</DependentUpon>
     </Compile>
@@ -99,6 +105,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\SelectCardsDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\SuggestionResponseDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
