--- a/ScoreCard/ScoreCard.csproj
+++ b/ScoreCard/ScoreCard.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\PlayerPossibility.cs" />
     <Compile Include="Models\Possibility.cs" />
+    <Compile Include="Models\PossibilityChange.cs" />
     <Compile Include="Models\PotentialPlayer.cs" />
     <Compile Include="Solver.cs" />
     <Compile Include="ViewModels\SelectCardsViewModel.cs" />
