Create initial simulator that can't do anything yet.

--- a/ScoreCardTest/ScoreCardTest.csproj
+++ b/ScoreCardTest/ScoreCardTest.csproj
@@ -73,6 +73,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScoreCard\ScoreCard.csproj">
+      <Project>{4e4e7529-95ed-480a-9f7f-a983b4f3aad3}</Project>
+      <Name>ScoreCard</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
