Add automated suggestion responses.

--- a/ScoreCardTest/ScoreCardTest.csproj
+++ b/ScoreCardTest/ScoreCardTest.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultSimulationTest.cs" />
     <Compile Include="Simulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
