--- a/ScoreCard/ScoreCard.csproj
+++ b/ScoreCard/ScoreCard.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Models\PossibilityChange.cs" />
     <Compile Include="Models\PotentialPlayer.cs" />
     <Compile Include="Solver.cs" />
+    <Compile Include="Models\SimplePrompt.cs" />
     <Compile Include="ViewModels\SelectCardsViewModel.cs" />
     <Compile Include="ViewModels\SuggestionResponseViewModel.cs" />
     <Compile Include="DesignData\SuggestionResponseViewModelDesignData.cs" />
